Refactor API paths and update data binding in archetype components

--- a/src/app/components/archetype-home/archetype-home.component.html
+++ b/src/app/components/archetype-home/archetype-home.component.html
@@ -5,7 +5,7 @@
             <div class="row">
                 <div class="col-12 mb-1">
                     <textarea class="form-control" formControlName="metadataFormDescription"
-                              rows="15"> {{myText}}</textarea>
+                              rows="15"> {{ this.detail.data }}</textarea>
                 </div>
             </div>
         </div>
