Rename archetype-home component to archetype-home-app and update references; enhance form structure and validation

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid justify-content-center no-wrap text-center">
     <archetype-title-app></archetype-title-app>
-    <archetype-home></archetype-home>
+    <archetype-home-app></archetype-home-app>
     <archetype-footer-app></archetype-footer-app>
 </div>
