--- a/src/app/components/archetype-title-app/archetype-title-app.component.html
+++ b/src/app/components/archetype-title-app/archetype-title-app.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-12 mt-5 fs-5 fw-medium">
+    <div class="col-12 mt-5 fs-5">
         {{ title.data | uppercase }}
     </div>
 </div>
