Refactor app structure: rename app module files to component files, update routing, and enhance page layout

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,5 @@
             justify-content-center
             text-center
             no-wrap">
-    <page-title></page-title>
-    <page-home></page-home>
-    <page-end></page-end>
+    <router-outlet></router-outlet>
 </div>
