--- a/src/app/components/dashboard-view/page-home/page-home.component.html
+++ b/src/app/components/dashboard-view/page-home/page-home.component.html
@@ -1,3 +1,5 @@
+<page-title></page-title>
+
 <form class="mt-5" [formGroup]="archetypeFrm" (ngSubmit)="archetypeSubmit()">
 
     <div class="container">
@@ -34,3 +36,5 @@
         </div>
     </div>
 </form>
+
+<page-end></page-end>
