Refactor page components: enhance form structure and validation, improve error handling, and introduce constants for better maintainability

--- a/src/app/components/dashboard-view/page-end/page-end.component.html
+++ b/src/app/components/dashboard-view/page-end/page-end.component.html
@@ -1,6 +1,8 @@
-<footer class="bg-white text-dark text-center py-3">
-    <p> {{ this.footer.data }} </p>
-    <p>
+<div class="row">
+    <footer class="py-3">
+        <p #txtFooter>
+            {{ this.footer.data }}
+        </p>
         <page-enterprise></page-enterprise>
-    </p>
-</footer>
+    </footer>
+</div>
