--- a/src/app/components/dashboard-view/page-title/page-title.component.html
+++ b/src/app/components/dashboard-view/page-title/page-title.component.html
@@ -1,5 +1,7 @@
 <div class="row">
     <div class="col-12 mt-5 fs-5">
-        {{ title.data | uppercase }}
+        <span #txtTitle>
+            {{ title.data | uppercase }}
+        </span>
     </div>
 </div>
