--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<div class="container-fluid justify-content-center text-center no-wrap">
+<div class="container justify-content-center align-items-center text-center">
     <router-outlet></router-outlet>
 </div>
