--- a/src/app/components/message-dialog/message-dialog.component.html
+++ b/src/app/components/message-dialog/message-dialog.component.html
@@ -1,9 +1,15 @@
-<h2 mat-dialog-title>{{ data.title | uppercase }}</h2>
+<h2 mat-dialog-title class="text-uppercase">
+    {{ data.title }}
+</h2>
 
 <div mat-dialog-content>
-    <p>{{ data.message }}</p>
+    <p class="mat-body-1">
+        {{ data.message }}
+    </p>
 </div>
 
 <div mat-dialog-actions align="end">
-    <button mat-flat-button color="primary" (click)="onConfirm()">Ok</button>
+    <button mat-flat-button color="primary" (click)="onConfirm()">
+        Ok
+    </button>
 </div>
