--- a/src/app/components/structure-view/page-structure/page-structure.component.html
+++ b/src/app/components/structure-view/page-structure/page-structure.component.html
@@ -5,16 +5,15 @@
     <h2>Table: {{ tableData[0].name }}</h2>
 
     <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
-
         <!-- Checkbox Column -->
         <ng-container matColumnDef="select">
             <th mat-header-cell *matHeaderCellDef>
-                <mat-checkbox
-                    color="primary"
-                    (change)="$event ? masterToggle() : null"
-                    [checked]="selection.hasValue() && isAllSelected()"
-                    [indeterminate]="selection.hasValue() && !isAllSelected()"
-                ></mat-checkbox>
+                <mat-checkbox color="primary"
+                              (change)="$event ? masterToggle() : null"
+                              [checked]="selection.hasValue() && isAllElementSelected()"
+                              [indeterminate]="selection.hasValue() && !isAllElementSelected()">
+
+                </mat-checkbox>
             </th>
             <td mat-cell *matCellDef="let row">
                 <mat-checkbox
@@ -25,34 +24,30 @@
                 ></mat-checkbox>
             </td>
         </ng-container>
+        <!-- Checkbox Column -->
 
         <!-- ID Column -->
         <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID </th>
-            <td mat-cell *matCellDef="let element"> {{ element.id }} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> ID</th>
+            <td mat-cell *matCellDef="let element"> {{ element.id }}</td>
         </ng-container>
-
         <!-- Name Column -->
         <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-            <td mat-cell *matCellDef="let element"> {{ element.name }} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Name</th>
+            <td mat-cell *matCellDef="let element"> {{ element.name }}</td>
         </ng-container>
-
         <!-- Type Column -->
         <ng-container matColumnDef="type">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Type </th>
-            <td mat-cell *matCellDef="let element"> {{ element.type }} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Type</th>
+            <td mat-cell *matCellDef="let element"> {{ element.type }}</td>
         </ng-container>
-
         <!-- Length Column -->
         <ng-container matColumnDef="length">
-            <th mat-header-cell *matHeaderCellDef mat-sort-header> Length </th>
-            <td mat-cell *matCellDef="let element"> {{ element.length }} </td>
+            <th mat-header-cell *matHeaderCellDef mat-sort-header> Length</th>
+            <td mat-cell *matCellDef="let element"> {{ element.length }}</td>
         </ng-container>
-
         <!-- Header and Row -->
         <tr mat-header-row *matHeaderRowDef="displayedColumnsWithSelect"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumnsWithSelect;"></tr>
-
     </table>
 </div>
