--- a/src/app/components/structure-view/page-structure/page-structure.component.html
+++ b/src/app/components/structure-view/page-structure/page-structure.component.html
@@ -4,8 +4,8 @@
 
 <page-title></page-title>
 
-<div class="table-container" style="position: relative;">
-    <table mat-table [dataSource]="dtsTables" class="mat-elevation-z8" style="width: 90%; margin: auto;">
+<div class="table-container mt-3">
+    <table mat-table [dataSource]="dtsTables" matSort class="mat-elevation-z8">
         <!-- ID da Tabela -->
         <ng-container matColumnDef="id">
             <th mat-header-cell *matHeaderCellDef> </th>
@@ -19,32 +19,37 @@
         </ng-container>
 
         <!-- Fields -->
-        <ng-container matColumnDef="fields">
+        <ng-container matColumnDef="fields" >
             <th mat-header-cell *matHeaderCellDef></th>
-            <td mat-cell *matCellDef="let table">
+            <td mat-cell *matCellDef="let table" class="pb-2">
 
                 <!-- Checkbox “Select All” -->
                 <mat-checkbox (change)="$event ? masterToggle(table) : null" [checked]="isAllSelected(table)">
                     Select All
                 </mat-checkbox>
-                <hr/>
 
                 <div class="fields-container">
                     <mat-card *ngFor="let field of table.fields" class="field-card mat-elevation-z2" appearance="outlined">
+
                         <mat-card-header>
                             <mat-card-title class="fw-bold"> {{ field.name | uppercase }}</mat-card-title>
-                            <mat-card-subtitle> Type: {{ field.type }}</mat-card-subtitle>
-                            <mat-card-subtitle> Length: {{ field.length }}</mat-card-subtitle>
-
-                            <mat-card-actions>
-                                <mat-checkbox
-                                    color="primary"
-                                    (click)="$event.stopPropagation()"
-                                    (change)="$event ? toggleRow(field) : null"
-                                    [checked]="selectionModel.isSelected(field)">
-                                </mat-checkbox>
-                            </mat-card-actions>
+                            <mat-card-subtitle>Type: {{ field.type }}</mat-card-subtitle>
+                            <mat-card-subtitle>Length: {{ field.length }}</mat-card-subtitle>
                         </mat-card-header>
+
+                        <mat-card-content>
+                            <!-- optional content here -->
+                        </mat-card-content>
+
+                        <mat-card-actions class="actions-bottom">
+                            <mat-checkbox
+                                color="primary"
+                                (click)="$event.stopPropagation()"
+                                (change)="$event ? toggleRow(field) : null"
+                                [checked]="selectionModel.isSelected(field)">
+                            </mat-checkbox>
+                        </mat-card-actions>
+
                     </mat-card>
                 </div>
 
