Refactor module components and services for improved clarity and consistency.

--- a/src/app/components/page-end/page-end.component.html
+++ b/src/app/components/page-end/page-end.component.html
@@ -2,7 +2,7 @@
     <div class="col-12 mt-3">
         <mat-card elevation="2" class="p-1 text-center">
             <p #lblFooter class="mb-2">
-                {{ this.footer().data }}
+                {{ this.footer().payload }}
             </p>
             <page-enterprise></page-enterprise>
         </mat-card>
