--- a/src/app/components/page-enterprise/page-enterprise.component.html
+++ b/src/app/components/page-enterprise/page-enterprise.component.html
@@ -2,7 +2,7 @@
     <div class="col-12 mt-2">
         <mat-card elevation="1" class="p-2 text-center">
             <p #lblEnterprise class="mb-0">
-                {{ this.enterprise().data }}
+                {{ this.enterprise().payload }}
             </p>
         </mat-card>
     </div>
