--- a/src/app/components/dashboard-view/page-home/page-home.component.html
+++ b/src/app/components/dashboard-view/page-home/page-home.component.html
@@ -10,7 +10,7 @@
                             readonly
                             rows="20"
                             formControlName="detail"
-                        >{{ detail.data }}</textarea>
+                        >{{ detail.payload }}</textarea>
                     <mat-error *ngIf="startValidation && errorMessage">{{ errorMessage }}</mat-error>
                 </mat-form-field>
 
