--- a/src/app/components/page-title/page-title.component.html
+++ b/src/app/components/page-title/page-title.component.html
@@ -2,7 +2,7 @@
     <div class="col-12 mt-3 mb-3">
         <mat-card elevation="2" class="p-3 text-center">
       <span #lblTitle class="fs-4 fw-normal">
-        {{ this.title().data | uppercase }}
+        {{ this.title().payload | uppercase }}
       </span>
         </mat-card>
     </div>
